[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox"
version = "0.1.0"
description = "Data Engineer resume generator"
requires-python = ">=3.11"
dependencies = [
    "pypandoc>=1.15",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.8",
    "pre-commit>=3.0",
    "pytest>=7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"